<resources>
    <string name="app_name">比乐</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="xinlang">微博</string>
    <string name="user">用户</string>
    <string name="hint_login_user">用户名/手机号/邮箱</string>
    <string name="hint_login_password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="login">登    录</string>
    <string name="login_no_account">没有账号？立即注册</string>
    <string name="register">注    册</string>
</resources>