<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/dp_130"
        android:layout_height="@dimen/dp_130"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/icon_logo"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/bg_user_account_login"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_user" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/dp_8"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4">

                <EditText
                    android:id="@+id/edUserAccount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_login_user"
                    android:maxLength="20"
                    android:textColor="@color/black_2"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/gray_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_password" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/dp_8"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4">

                <EditText
                    android:id="@+id/edUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_login_password"
                    android:maxLength="20"
                    android:textColor="@color/black_2"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_login_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_info"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20">

        <CheckBox
            android:id="@+id/cbRememberPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textColor="@color/black_2"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvForgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/forgot_password"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_below="@id/layout_login_action"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/shape_login_login"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_20" />

    <LinearLayout
        android:id="@+id/layout_logn_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_60"
        android:layout_marginBottom="@dimen/dp_20"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layoutPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_phone"
                style="@style/KeepTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/phone"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/sp_13" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_above="@id/tv_phone"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_8"
                android:src="@mipmap/icon_phone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutWeChat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_wechat"
                style="@style/KeepTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/wechat"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/sp_13" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_above="@id/tv_wechat"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_8"
                android:src="@mipmap/icon_wechat" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutQQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_qq"
                style="@style/KeepTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/qq"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/sp_13" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_above="@id/tv_qq"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_8"
                android:src="@mipmap/icon_qq" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutXingLang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_xinlang"
                style="@style/KeepTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/xinlang"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/sp_13" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_above="@id/tv_xinlang"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_8"
                android:src="@mipmap/icon_xinlang" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_above="@id/layout_logn_type"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/login_no_account"
        android:textColor="@color/black_3"
        android:textSize="@dimen/sp_14" />
</RelativeLayout>