<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_150"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/bg_user_account_login"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_user" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/dp_8"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4">

                <EditText
                    android:id="@+id/edUserAccount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_login_user"
                    android:maxLength="20"
                    android:textColor="@color/black_2"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/gray_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6">

            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_password" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/dp_8"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4">

                <EditText
                    android:id="@+id/edUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_login_password"
                    android:maxLength="20"
                    android:textColor="@color/black_2"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/shape_login_login"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_20" />
</LinearLayout>